sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition_Approvals__c/Inventory_Requisition_Approvals__c.object-meta.xml
<CustomObject>
    <label>Inventory Requisition Approvals</label>
    <nameField>
        <displayFormat>IRA-{00000}</displayFormat>
        <label>Inventory Requisition Approvals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Requisition Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>