sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition_Approvals__c/fields/Actual_Approval__c.field-meta.xml
<CustomField>
    <fullName>Actual_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actual Approval</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Inventory Requisition Approvals (Actual Approval)</relationshipLabel>
    <relationshipName>Inventory_Requisition_Approvals1</relationshipName>
    <type>Lookup</type>
</CustomField>