sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition_Approvals__c/fields/Approval_Step__c.field-meta.xml
<CustomField>
    <fullName>Approval_Step__c</fullName>
    <label>Approval Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supervisor Approval</fullName>
                <label>1. Supervisor Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>