sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition_Approvals__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Inventory Requisition Approvals</relationshipLabel>
    <relationshipName>Inventory_Requisition_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>