sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition_Approvals__c/fields/Inventory_Requisition_Items__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Requisition_Items__c</fullName>
    <label>Inventory Requisition Item</label>
    <referenceTo>Inventory_Requisition_Item__c</referenceTo>
    <relationshipLabel>Inventory Requisition Approvals</relationshipLabel>
    <relationshipName>Inventory_Requisition_Approvals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>